--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -60,19 +60,22 @@
     .serviziTitle h1, .testimonianzeTitle h1, .contattiTitle h1 {
         font-size: 2.3em;
     }
-    .contatti {
+    .servizi, .contatti {
         padding-left: 20px;
         padding-right: 20px;
-    }
-    .servizi {
-        padding-left: 15px;
-        padding-right: 15px;
     }
 }
 
 @media screen and (max-width: 390px) {
-    row {
-        width: auto;
+    .row {
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    }
+}
+
+@media screen and (max-width: 370px) {
+    .home .content h1 {
+        font-size: 2.7em;
+        line-height: 50px;
     }
 }
 
@@ -90,5 +93,3 @@
         font-size: 2em;
     }
 }
-
-
