--- a/css/style.css
+++ b/css/style.css
@@ -280,6 +280,7 @@ a {
     padding: 35px 10px;
     border-radius: 5px;
     font-size: 14px;
+    cursor: pointer;
     background-color: #fff;
     transition: transform 0.5s, background 0.5s;
     height: fit-content;
@@ -569,5 +570,3 @@ a {
     color: #000;
     border-color: #77c6c9;
 }
-
-
